--------------------------------------------------------------------------------
svs 17.03.2021 16:39:34 +0300 - build 5763

1. SQLite 3.35.1

--------------------------------------------------------------------------------
drkns 16.03.2021 23:05:27 +0000 - build 5762

1. Continuation of 5761.

--------------------------------------------------------------------------------
drkns 15.03.2021 18:31:13 +0000 - build 5761

1. Fix stack tracing on 2k/XP.

--------------------------------------------------------------------------------
svs 14.03.2021 23:34:34 +0300 - build 5760

1. SQLite 3.35.0

--------------------------------------------------------------------------------
drkns 14.03.2021 16:53:28 +0000 - build 5759

1. VS2019 & 2k/XP compatibility.

2. Reduce log spamming about absent imports for old OSes.

3. Replace \xNNNN character codes in sources with actual characters - we use UTF-8 now so nothing should get lost.

--------------------------------------------------------------------------------
drkns 14.03.2021 15:36:26 +0000 - build 5758

1. gh-371: fails to obtain administrator privileges

--------------------------------------------------------------------------------
drkns 10.03.2021 19:21:56 +0000 - build 5757

1. 0003850: Error running files from Google Drive

2. Refactoring.

--------------------------------------------------------------------------------
drkns 06.03.2021 22:30:25 +0000 - build 5756

1. Reduce log binary footprint.

2. Remove excessive logging.

--------------------------------------------------------------------------------
drkns 05.03.2021 21:02:33 +0000 - build 5755

1. gh-367: Reproducible exception related to regular expressions.

--------------------------------------------------------------------------------
drkns 05.03.2021 00:31:26 +0000 - build 5754

1. UCD can detect CJK charsets if the locale is CJK.

2. More logging.

3. Refactoring.

--------------------------------------------------------------------------------